# SMR3872-Colombia-Mine

Day1/exercises/cmake-demo/step-3/: CMakeLists.txt
Day2/: test.c
Day2/lab/: CMakeLists.txt  a.out  my_identity.c  slurm-1032021.out  slurm-1032024.out
Day3/lab/ljmd-baseline/src/: compile_instru.md  ljmd-backup  ljmd-backup.c  ljmd-serial  ljmd.c  ljmd.c.backup  ljmd_openmp
Day3/lab/mpi4py-demo/ring/blocking/: CMakeLists.txt  ring_blocking.c
Day3/lab/mpi4py-demo/ring/nonblocking/: CMakeLists.txt
Day3/lab/shmem_openmp/: my_pi.c  my_pi.sh  my_pi.x  slurm-1177277.out
Day4/OpenMP_offloading_lab/: SAXPY.x  SAXPY_serial.x  SAXPY_target.x  SAXPY_target_t3.x  SAXPY_target_t3_distri.x  SAXPY_target_t3_parallel.x  compile_instru.md  saxpy_serial.c  saxpy_target.c  saxpy_target_t3.c  saxpy_target_t3_distri.c  saxpy_target_t3_parallel.c
Day5/Lab/Tutorial-ML1/: run_test_Cenv.sh
Day5/Lab/Tutorial-ML1/dim-reduction/: PCA.py
Day6/Intefacing_multiple_languages/interfacing-python/01-hello/: compile.sh
Day6/Intefacing_multiple_languages/interfacing-python/02-sum/: compile.sh
Day6/Intefacing_multiple_languages/interfacing-python/03-string/: compile.sh
Day6/Intefacing_multiple_languages/interfacing-python/04-arrays/: compile.sh  sum.py
Day6/Intefacing_multiple_languages/interfacing-python/05-structs/: CMakeLists.txt  compile.sh  data.c  data.py
Day6/singularity_tutorial/: tutorial.md
Day6/singularity_tutorial/def_files/: mytoken
Day7/Lab/floating-point/tests/: epsilon  inverse  loop  sum_numbers
MyFiles/Broadcast/: CMakeLists.txt  mpi_bcast.c
MyFiles/Ibcast/: CMakeLists.txt  mpi_ibcast.c
MyFiles/OBcast/: CMakeLists.txt  obcast.c
MyFiles/ireduce/: CMakeLists.txt  ireduce.c
MyFiles/prod_reduce/: CMakeLists.txt  prod_reduce.c
MyFiles/reduce/: CMakeLists.txt  reduce.c
MyFiles/ring/blocking/: CMakeLists.txt  ring.c
MyFiles/ring/nonblocking/: ring.c
MyFiles/send/: CMakeLists.txt  send.c
MyProject/: instru.md
MyProject/ljmd-baseline/: Makefile.backup  ljmd-backup.x  ljmd-mpi.x  ljmd-openmp.x  ljmd-serial.x  slurm-1287235.out  slurm-1287677.out  slurm-1298254.out  slurm-1322618.out  test.sh
MyProject/ljmd-baseline/Obj-backup/: Makefile.backup
MyProject/ljmd-baseline/Obj-mpi/: Makefile.backup
MyProject/ljmd-baseline/Obj-openmp/: Makefile.backup
MyProject/ljmd-baseline/Obj-serial/: Makefile.backup
MyProject/ljmd-baseline/examples/: argon_108.xyz
MyProject/ljmd-baseline/src/: compile_instru.md  ljmd-backup.c  ljmd-mpi.c  ljmd-openmp.c  ljmd.c  verlet.py
